Fixed: overflow in pre element.

--- a/src/css/components/ParameterSchema.pcss
+++ b/src/css/components/ParameterSchema.pcss
@@ -136,6 +136,11 @@
   border-left: 2px solid var(--color-basic-skyblue);
 }
 
+.ParameterSchema__preview .PrettyPrint pre {
+  max-height: 100px;
+  overflow-y: scroll;
+}
+
 .ParameterSchema__validates {
   padding: 8px 0 8px 8px;
   border-left: 2px solid var(--color-bg-error);
